 * Fix: Improve speed of actions that trigger email sends by reducing the number of queries by 200x (20,000%). Queries when sending emails are now linear to the number of users receiving the email instead of the number of users in the system.
 * Fix: error deleting bug files fixed
 * Fix #2944: Project files are not deleted when project is deleted.
 * Fix #2939: Confusing file names for uploaded project documents.
 * Fix #2953: View all bugs page empty (temporary fix by disabling compression when running on an IIS server).
 * Fix #2954: Bgcolor attribute on TD in view_all_bug_page (moved to TR) [optimisation]
 * Fix #2956: db_insert_id() did not use mysql_insert_id(), but executed another query (which is probably slower)
 * Fix #2961: A disabled project can not be the currently selected project
 * Fix #2964: proj_doc_add.php is empty if document file already exists
 * Fix #2967: Make bugnotes visible while updating bugs (updating, resolving, and closing)
 * Fix #2968: Add query counts to action pages.
 * Fix #2969: Bug not found error when deleting a bugnote.
 * Fix #2970: Sending a reminder sends two notifications.
 * Fix #2974: Message "APPLICATION WARNING #300" on main page.
 * Fix #2975: 'date modified' column of bug history in email is to tight.
 * Fix #2976: Incorrect handling of URLs.
 * Fix #2978: URLs not hyperlinked in news_add page.
 * Fix #2980: Escaping fixes are not applied to the bug history table.
 * Fix #2982: Having email_set_category set to EMAIL_CATEGORY_PROJECT_CATEGORY erased various mail headers.
 * Fix #2989: Allow managers to manage bugnotes.
 * Fix #2993: Read/Write access levels not checked in custom fields.
 * DB Upgrade: Added "id" primary key to bug history table (needed for #2980).
 * Languages: Updated German localisation.
 * Changed config option (default_notify_flags): remove 'admin', 'manager', and 'threshold' categories and add 'threshold_min' and 'threshold_max'